Chapter04/monitoring/grafana/grafana-basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-basic-ingress
  namespace: monitoring
  annotations:
#    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
      service:
        name: grafana-service
        port:
          number: 3000
